--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&;800display=swap" rel="stylesheet">
  
 <script>
-  window.location.href = "/fake-design-system.html"
+  window.location.href = "result-10/fake-design-system.html"
 </script>
