--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no" />
+<base href="/"/>
 <link href="/assets/logos/favicon-default.png" rel="icon" />
 
 <!-- Primary Meta Tags -->
