--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no" />
 <base href="."/>
-<link href="/assets/logos/favicon-default.png" rel="icon" />
+<link href="./assets/logos/favicon-default.png" rel="icon" />
 
 <!-- Primary Meta Tags -->
 <title>Fake© Design System | Made with Supernova</title>
